force-app/main/default/objects/Activity/fields/DU_InteractionPoint__c.field-meta.xml
<CustomField>
    <fullName>DU_InteractionPoint__c</fullName>
    <description>CDM: Stores the interaction step on which the task/event is created.</description>
    <inlineHelpText>Contains the Status value from the Interaction Points from the DU Journey</inlineHelpText>
    <label>Interaction Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Interest Demonstrated</fullName>
            </value>
            <value>
                <fullName>Contact Form Submitted</fullName>
            </value>
            <value>
                <fullName>Product Configuration Completed</fullName>
            </value>
            <value>
                <fullName>Product Price Requested</fullName>
            </value>
            <value>
                <fullName>Identification Details Provided</fullName>
            </value>
            <value>
                <fullName>Contact Details Provided</fullName>
            </value>
            <value>
                <fullName>Payment Details Provided</fullName>
            </value>
            <value>
                <fullName>Documents Uploaded</fullName>
            </value>
            <value>
                <fullName>Product Application Submitted</fullName>
            </value>
            <value>
                <fullName>Dealer Appointment Selected</fullName>
            </value>
            <value>
                <fullName>Delivery Appointment Selected</fullName>
            </value>
            <value>
                <fullName>Contract Signed and Approved by VWFS</fullName>
            </value>
            <value>
                <fullName>Contract Rejected by VWFS</fullName>
            </value>
            <value>
                <fullName>Contract Details Visited/Viewed</fullName>
            </value>
            <value>
                <fullName>Journey Abandoned</fullName>
            </value>
            <value>
                <fullName>Continue Later Request Submitted</fullName>
            </value>
            <value>
                <fullName>Error Received</fullName>
            </value>
            <value>
                <fullName>Email Confirmation Sent</fullName>
            </value>
            <value>
                <fullName>Email Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Email Opened</fullName>
            </value>
            <value>
                <fullName>Email Tracking Link Clicked</fullName>
            </value>
            <value>
                <fullName>Email Soft Bounced</fullName>
            </value>
            <value>
                <fullName>Email Hard Bounced</fullName>
            </value>
            <value>
                <fullName>Customer Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Credit Check Approved</fullName>
            </value>
            <value>
                <fullName>Credit Check Rejected</fullName>
            </value>
            <value>
                <fullName>Contract Ready</fullName>
            </value>
            <value>
                <fullName>Contract Rejected</fullName>
            </value>
            <value>
                <fullName>Contract Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>