force-app/main/default/objects/Activity/fields/EasyphoneId__c.field-meta.xml
<CustomField>
    <fullName>EasyphoneId__c</fullName>
    <description>Id reprise Easyphone</description>
    <externalId>true</externalId>
    <label>EasyphoneId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>