force-app/main/default/objects/Activity/fields/OdigoCti__Additional_Data__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Additional_Data__c</fullName>
    <label>Additional data</label>
    <type>TextArea</type>
</CustomField>