force-app/main/default/objects/Activity/fields/OdigoCti__Call_duration__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_duration__c</fullName>
    <label>Call duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>