force-app/main/default/objects/Activity/fields/OdigoCti__Call_end_time__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_end_time__c</fullName>
    <description>End of the call (date &amp; time)</description>
    <label>Call end time</label>
    <type>DateTime</type>
</CustomField>