force-app/main/default/objects/Activity/fields/OdigoCti__Call_fail_cause__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_fail_cause__c</fullName>
    <description>Cause of the fail</description>
    <label>Call fail cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>