force-app/main/default/objects/Activity/fields/OdigoCti__Call_fail_reason__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_fail_reason__c</fullName>
    <label>Call fail reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>