force-app/main/default/objects/Activity/fields/OdigoCti__Call_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_Folder_ID__c</fullName>
    <description>Folder ID in IVR</description>
    <label>Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>