force-app/main/default/objects/Activity/fields/OdigoCti__Call_reference__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_reference__c</fullName>
    <description>RFAP</description>
    <label>Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>