force-app/main/default/objects/Activity/fields/OdigoCti__Call_Result__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_Result__c</fullName>
    <label>Call result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
            <value>
                <fullName>Value 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>