force-app/main/default/objects/Activity/fields/OdigoCti__Call_start_time__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_start_time__c</fullName>
    <description>Start time (and date)</description>
    <label>Call start time</label>
    <type>DateTime</type>
</CustomField>