force-app/main/default/objects/Activity/fields/OdigoCti__Call_Type__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Call_Type__c</fullName>
    <description>Call type</description>
    <label>Call type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Call&amp;Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>