force-app/main/default/objects/Activity/fields/OdigoCti__Campaign__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Campaign__c</fullName>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>