force-app/main/default/objects/Activity/fields/OdigoCti__IVR_Number__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__IVR_Number__c</fullName>
    <description>SVI number</description>
    <label>IVR Number</label>
    <type>Phone</type>
</CustomField>