force-app/main/default/objects/Activity/fields/OdigoCti__Phone_number__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Phone_number__c</fullName>
    <description>Caller / Calling phone number</description>
    <label>Phone number</label>
    <type>Phone</type>
</CustomField>