force-app/main/default/objects/Activity/fields/OdigoCti__Skill__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Skill__c</fullName>
    <label>Skill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>