force-app/main/default/objects/Activity/fields/OdigoCti__Survey_information__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Survey_information__c</fullName>
    <label>Survey information</label>
    <type>TextArea</type>
</CustomField>