force-app/main/default/objects/Activity/fields/OdigoCti__Survey_name__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Survey_name__c</fullName>
    <label>Survey name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>