force-app/main/default/objects/Activity/fields/OdigoCti__Survey_score__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Survey_score__c</fullName>
    <label>Survey score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>