force-app/main/default/objects/Activity/fields/OdigoCti__Transfer__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Transfer__c</fullName>
    <label>Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>