force-app/main/default/objects/Activity/fields/OdigoCti__Waiting_time__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Waiting_time__c</fullName>
    <label>Waiting time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>