force-app/main/default/objects/Activity/fields/OdigoCti__Waiting_time_second__c.field-meta.xml
<CustomField>
    <fullName>OdigoCti__Waiting_time_second__c</fullName>
    <label>Waiting time (second)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>